--- a/.github/workflows/main_ntier-fe.yml
+++ b/.github/workflows/main_ntier-fe.yml
@@ -7,8 +7,8 @@ on:
   workflow_dispatch:
 
 env:
-  AZURE_WEBAPP_NAME: ntier-fe   # set this to your application's name
-  NODE_VERSION: '18-lts'                # set this to the node version to use
+  AZURE_WEBAPP_NAME: 'ntier-fe'   # set this to your application's name
+  NODE_VERSION: '18.x'                # set this to the node version to use
   AZURE_WEBAPP_PACKAGE_PATH: '.'      # set this to the path to your web app project, defaults to the repository root
 
 jobs:
